force-app/main/default/objects/Platform_Subscription__c/Platform_Subscription__c.object-meta.xml
<CustomObject>
    <label>Platform Subscription</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>