force-app/main/default/objects/Platform_Subscription__c/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Billing_Cycle</valueSetName>
    </valueSet>
</CustomField>