force-app/main/default/objects/Platform_Subscription__c/fields/Platform_Service__c.field-meta.xml
<CustomField>
    <fullName>Platform_Service__c</fullName>
    <label>Platform Service</label>
    <referenceTo>Platform_Service__c</referenceTo>
    <relationshipLabel>Platform Subscriptions</relationshipLabel>
    <relationshipName>Platform_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>