force-app/main/default/objects/Platform_Subscription__c/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <label>Seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>